tests/e2e/testdata/eastwest-activation.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: ServiceAccount
metadata:
  name: payment
  namespace: e2e
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: e2e
spec:
  selector:
    app: payment
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: e2e
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
        inherent.dubbo.apache.org/inject: "true"
      annotations:
        inject.dubbo.apache.org/templates: grpc-engine
    spec:
      serviceAccountName: payment
      containers:
        - name: payment
          image: dubml/activation-e2e:latest
          imagePullPolicy: IfNotPresent
          args: ["server"]
          ports:
            - name: grpc
              containerPort: 8080
---
apiVersion: networking.dubbo.apache.org/v1alpha3
kind: ServiceActivationPolicy
metadata:
  name: payment
  namespace: e2e
spec:
  targetRef:
    kind: Service
    name: payment
  autoscalerRef:
    group: keda.sh
    kind: ScaledObject
    name: payment
  backendServiceAccounts:
    - payment
  protocols:
    - HTTP
    - GRPC_UNARY
  requestTimeout: 60s
  maxPendingRequests: 100
  failurePolicy: REJECT
---
apiVersion: security.dubbo.apache.org/v1alpha3
kind: PeerAuthentication
metadata:
  name: permissive
  namespace: e2e
spec:
  mtls:
    mode: PERMISSIVE
